# Cygnal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  cygnal.db  docker-compose.yml  examples.http  main.py  mkdocs.yml  pyproject.toml  seed.py  spec.md
.github/workflows/: ci.yaml
.streamlit/: config.toml
ai_analyst/: config.py  main.py  routes.py  schemas.py  service.py
backend/: auth.py  config.py  database.py  main.py  models.py  repository.py
backend/api/: dependencies.py  error_handlers.py
backend/api/routes/: auth.py  indicators.py
backend/core/: config.py  security.py
backend/db/: session.py
backend/middleware/: rate_limit.py  trace.py
backend/models/: __init__.py  enums.py  indicator.py
backend/repositories/: indicators.py
backend/schemas/: auth.py  indicators.py
backend/services/: authentication.py  indicator_exports.py  ioc_validation.py
cygnal/app/: main.py  models.py  repository.py
cygnal/backend/: models.py
cygnal/frontend/: dashboard.py
docs/: EX3-notes.md  course-alignment.md  product-spec.md  release-checklist.md  service-contract.md
docs/runbooks/: compose.md
frontend/: client.py  dashboard.py  styles.py
frontend/api/: __init__.py  client.py  config.py
frontend/components/: indicator_table.py  layout.py
frontend/services/: __init__.py  indicators.py
frontend/state/: __init__.py  session.py
frontend/views/: __init__.py  add_indicator.py  administration.py  ai_analyst.py  dashboard.py  indicators.py  login.py  reports.py  search.py  settings.py
scripts/: check_docs.py  check_release.py  demo.sh  indicators_mcp.py  mcp_probe.py  refresh.py  seed.py
tests/: conftest.py  test_frontend.py  test_main.py
tests/ai_analyst/: test_api.py
tests/backend/: test_api.py  test_rate_limit.py
tests/frontend/: test_client.py  test_navigation.py  test_styles.py
tests/worker/: test_refresh.py
ti_service/app/: config.py  main.py  models.py  repository.py
worker/: __init__.py  config.py  refresh.py
