[project]
name = "cygnal"
version = "0.1.0"
description = "Cygnal — A centralized platform to manage and share cyber threat indicators."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.13.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.4.0",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]

[tool.uv]
managed = true
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "anyio>=4.13.0",
]
